--- a/crossplane/Makefile
+++ b/crossplane/Makefile
@@ -1,4 +1,4 @@
-CROSSPLANE_WORKING_DIR := $(REPO_DIR)/crossplane
+CROSSPLANE_WORKING_DIR := $(PWD)
 
 ## crossplane-init: Install the crossplane CLI
 .PHONY: crossplane-init
@@ -10,6 +10,7 @@ crossplane-init: | _crossplane-repo-install
 crossplane-install:
 	@helm upgrade --install crossplane --namespace crossplane-system --create-namespace --wait --timeout 300s crossplane-stable/crossplane -f $(CROSSPLANE_WORKING_DIR)/helm-values.yaml
 	@kubectl apply -f "$(CROSSPLANE_WORKING_DIR)/aws-provider-config.yaml"
+	@kubectl apply -f "$(CROSSPLANE_WORKING_DIR)/sql-provider-config.yaml"
 
 ## crossplane-deploy-network: Deploy basic networking reqources
 .PHONY: crossplane-deploy-network
