--- a/crossplane/aws-provider-config.yaml
+++ b/crossplane/aws-provider-config.yaml
@@ -15,6 +15,7 @@ apiVersion: aws.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: aws-provider-config
+  namespace: crossplane-system
 spec:
   credentials:
     source: Secret
